fix issues validation
